--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Visntel - private investigator HTML website template">
+  <meta name="description" content="Visntel">
   <!-- fav icon -->
   <link rel="icon" href="images/favicon.ico">
 
