--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Visntel">
+  <meta name="description" content="Private Intelligence Agency">
+  <meta property="og:image" content="images/logop.png"/>
   <!-- fav icon -->
   <link rel="icon" href="images/favicon.ico">
 
