--- a/contact.html
+++ b/contact.html
@@ -89,71 +89,72 @@
     </header>
     <!-- ======= end Header ======= -->
     <!-- ============== Start contact section ========== -->
-    <section class="contact position-relative pt-4 mt-4" id="contact">
-        <div class="container section position-relative padding-32">
-            <div class="row g-4">
-                <div class="col-lg-6 col-12">
-                    <div class="d-flex flex-column gap-16">
-                        <div class="heading d-flex flex-column">
-                            <h1 class="heading-1" data-aos="fade-up">get in touch with our team today</h1>
-                            <p class="body-1 col-lg-9" data-aos="fade-up" data-aos-delay="100">Our seasoned team of
-                                experts at
-                                Visntel specializes in unravelling mysteries,
-                                conducting thorough background checks, and uncovering the truth with utmost
-                                confidentiality.</p>
-                        </div>
-                        <div class="d-flex flex-column justify-content-start gap-8" data-aos="fade-up"
-                            data-aos-delay="150">
-                            <div class="d-flex align-items-center gap-8">
-                                <div class="icon d-flex justify-content-center align-items-center">
-                                    <i class="fa-solid fa-phone icon-md"></i>
-                                </div>
-                                <div class="d-flex flex-column justify-content-center align-self-center h-100">
-                                    <h3 class="heading-3 m-0 p-0">call us !</h3>
-                                    <p class="body-2">+123 456 789</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="d-flex flex-column justify-content-start gap-8" data-aos="fade-up"
-                            data-aos-delay="200">
-                            <div class="d-flex align-items-center gap-8 ">
-                                <div class="icon d-flex justify-content-center align-items-center">
-                                    <i class="fa-solid fa-location-dot icon-md"></i>
-                                </div>
-                                <div class="d-flex flex-column justify-content-center align-self-center h-100">
-                                    <h3 class="heading-3 m-0 p-0">location</h3>
-                                    <p class="body-2">London, UK,52050</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-12">
-                    <form action="https://erramix-themes.com/Visntel/Visntel-multipage/contact.php" method="post" class="d-flex flex-column gap-16">
-                        <div class="row g-3">
-                            <div class="col-lg-6 col-12" data-aos="fade-right" data-aos-delay="150">
-                                <input type="text" placeholder="name" id="name" name="name" required
-                                    class="b-radius padding-16 w-100">
-                            </div>
-                            <div class="col-lg-6 col-12" data-aos="fade-left" data-aos-delay="150">
-                                <input type="text" placeholder="subject" id="subject" name="subject" required
-                                    class="b-radius padding-16 w-100">
-                            </div>
-                        </div>
-                        <input type="email" id="email" placeholder="email" name="email" required
-                            class="b-radius padding-16" data-aos="fade-up" data-aos-delay="200">
-                        <textarea id="message" placeholder="message" name="message" required cols="30" rows="8"
-                            class="b-radius padding-16" data-aos="fade-up" data-aos-delay="250"></textarea>
-                        <button type="submit" value="Submit" class="btn" data-aos="fade-up" data-aos-delay="300">send
-                            now</button>
-                    </form>
-                </div>
+<section class="contact position-relative pt-4 mt-4" id="contact">
+    <div class="container section position-relative padding-32">
+      <div class="row g-4">
+        <div class="col-lg-6 col-12">
+          <div class="d-flex flex-column gap-16">
+            <div class="heading d-flex flex-column">
+              <h1 class="heading-1" data-aos="fade-up">get in touch with our team today</h1>
+              <p class="body-1 col-lg-9" data-aos="fade-up" data-aos-delay="100">At Visntel, we're the Sherlock Holmes of investigations! Our seasoned squad doesn't just uncover mysteries; we crack them wide open with finesse. From digging deep with thorough background checks to revealing the hidden truth, we're your go-to detectives, keeping confidentiality as tight as a vault.</p>
             </div>
-            <iframe class="contact-map mt-4 pt-2" data-aos="fade-up" data-aos-delay="350"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.9050207912896!2d-0.14675028449633118!3d51.514958479636384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761ad554c335c1%3A0xda2164b934c67c1a!2sOxford+St%2C+London%2C+UK!5e0!3m2!1sen!2sro!4v1485889312335"
-                allowfullscreen=""></iframe>
+
+
+           <div class="d-flex flex-column justify-content-start gap-8" data-aos="fade-up" data-aos-delay="150">
+              <div class="d-flex align-items-center gap-8">
+                <div class="icon d-flex justify-content-center align-items-center">
+                  <i class="fa-solid fa-envelope icon-md"></i>
+                </div>
+                <div class="d-flex flex-column justify-content-center align-self-center h-100">
+                  <h3 class="heading-3 m-0 p-0">Email Us:</h3>
+                  <p class="body-2">mail@visntel.com</p>
+                </div>
+              </div>
+            </div> 
+
+
+
+            <!-- <div class="d-flex flex-column justify-content-start gap-8" data-aos="fade-up" data-aos-delay="200">
+              <div class="d-flex align-items-center gap-8 ">
+                <div class="icon d-flex justify-content-center align-items-center">
+                  <i class="fa-solid fa-location-dot icon-md"></i>
+                </div>
+                <div class="d-flex flex-column justify-content-center align-self-center h-100">
+                  <h3 class="heading-3 m-0 p-0">location</h3>
+                  <p class="body-2">London, UK,52050</p>
+                </div>
+              </div>
+            </div> -->
+
+
+          </div>
         </div>
-    </section>
+        <div class="col-lg-6 col-12">
+          <form action="https://erramix-themes.com/Visntel/Visntel-multipage/contact.php" method="post" class="d-flex flex-column gap-16">
+            <div class="row g-3">
+              <div class="col-lg-6 col-12" data-aos="fade-right" data-aos-delay="150">
+                <input type="text" placeholder="name" id="name" name="name" required class="b-radius padding-16 w-100">
+              </div>
+              <div class="col-lg-6 col-12" data-aos="fade-left" data-aos-delay="150">
+                <input type="text" placeholder="subject" id="subject" name="subject" required
+                  class="b-radius padding-16 w-100">
+              </div>
+            </div>
+            <input type="email" id="email" placeholder="email" name="email" required class="b-radius padding-16"
+              data-aos="fade-up" data-aos-delay="200">
+            <textarea id="message" placeholder="message" name="message" required cols="30" rows="8"
+              class="b-radius padding-16" data-aos="fade-up" data-aos-delay="250"></textarea>
+            <button type="submit" value="Submit" class="btn" data-aos="fade-up" data-aos-delay="300">send now</button>
+          </form>
+        </div>
+      </div>
+<!-- 
+      <iframe class="contact-map mt-4 pt-2" data-aos="fade-up" data-aos-delay="350"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.9050207912896!2d-0.14675028449633118!3d51.514958479636384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761ad554c335c1%3A0xda2164b934c67c1a!2sOxford+St%2C+London%2C+UK!5e0!3m2!1sen!2sro!4v1485889312335"
+        allowfullscreen=""></iframe> -->
+
+    </div>
+  </section>
     <!-- ============== end contact section ========== -->
 
 
@@ -291,46 +292,44 @@
 
     <!-- ============== start footer section ========== -->
     <section class="footer position-relative pt-4 mt-4">
-        <div class="container">
-            <div class="row justify-content-center align-items-center g-4 py-2">
-                <div class="col-lg-9 col-12">
-                    <div class="d-flex flex-column">
-                        <h2 class="heading-2">Visntel</h2>
-                        <p class="body-2 col-lg-8">Discover your dream home with our user-friendly interface and
-                            extensive property
-                            listings.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-12">
-                    <div class="d-flex flex-lg-row flex-md-row flex-column gap-4">
-                        <a href="#">home</a>
-                        <a href="#">about us</a>
-                        <a href="#">services</a>
-                        <a href="#">contact</a>
-                    </div>
-                </div>
-            </div>
-            <hr class="p-0 m-0">
-            <div class="row justify-content-center align-items-center g-4 py-2">
-                <div class="col-lg-6 col-12">
-                    <div class="d-flex gap-3">
-                        <i class="fa-brands fa-facebook icon-sm"></i>
-                        <i class="fa-brands fa-instagram icon-sm"></i>
-                        <i class="fa-brands fa-twitter icon-sm"></i>
-                        <i class="fa-brands fa-linkedin icon-sm"></i>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-12">
-                    <div
-                        class="d-flex w-100 justify-content-lg-end justify-content-center align-items-center  align-items-lg-end">
-                        <p class="body-2">copyright © 2024 Visntel</p>
-                    </div>
-                </div>
-            </div>
-
+    <div class="container">
+      <div class="row justify-content-center align-items-center g-4 py-2">
+        <div class="col-lg-9 col-12">
+          <div class="d-flex flex-column">
+            <h2 class="heading-2">Visntel</h2>
+            <p class="body-2 col-lg-8">
+            </p>
+          </div>
         </div>
-    </section>
+        <div class="col-lg-3 col-12">
+          <div class="d-flex flex-lg-row flex-md-row flex-column gap-4">
+            <a href="index.html">home</a>
+            <a href="about.html">about us</a>
+            <a href="services.html">services</a>
+            <a href="contact.html">contact</a>
+          </div>
+        </div>
+      </div>
+      <hr class="p-0 m-0">
+      <div class="row justify-content-center align-items-center g-4 py-2">
+        <div class="col-lg-6 col-12">
+          <div class="d-flex gap-3">
+           <a href="https://facebook.com/visntel" target="_blank"> <i class="fa-brands fa-facebook icon-sm"></i></a>
+            <a href="https://instagram.com/thevisntel" target="_blank"> <i class="fa-brands fa-instagram icon-sm"></i></a>
+            <a href="https://x.com/visntel" target="_blank"> <i class="fa-brands fa-twitter icon-sm"></i></a>
+            <a href="https://linkedin.com/company/visntel" target="_blank"> <i class="fa-brands fa-linkedin icon-sm"></i></a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-12">
+          <div
+            class="d-flex w-100 justify-content-lg-end justify-content-center align-items-center  align-items-lg-end">
+            <p class="body-2">copyright © 2024 Visntel</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
     <!-- ============== end footer section ========== -->
 
 
