--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <i class="fa-solid fa-user-shield icon-lg"></i>
             <h2 class="heading-2">personal protection</h2>
             <p class="body-2">
-              Our trained professionals provide discreet and reliable protection tailored to your needs. Whether for individuals, families, or events, we prioritize your safety and well-being. Contact us today.
+              Our trained professionals provide discreet and reliable protection tailored to your needs. Whether for individuals, families, or events, we prioritize your safety and well-being.
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-12" data-aos="fade-left" data-aos-delay="200">
@@ -168,7 +168,7 @@
             <i class="fa-solid fa-binoculars icon-lg"></i>
             <h2 class="heading-2">infidelity investigation</h2>
             <p class="body-2">
-              Uncover the truth with our infidelity investigation services. Our discreet and professional team specializes in gathering evidence to provide clarity in delicate situations.
+              Uncover the truth with our infidelity investigation services. Our professional team specializes in gathering evidence to provide clarity in delicate situations.
             </p>
           </div>
         </div>
@@ -239,7 +239,7 @@
                   <i class="fa-solid fa-magnifying-glass icon-md"></i>
                   <h2 class="heading-3">collect all evidence</h2>
                   <p class="body-2">
-                   Gather all the evidence you need with our comprehensive services. From meticulous documentation to expert analysis, we ensure no stone is left unturned. Trust us to collect and organize all evidence efficiently and effectively.
+                   Gather all the evidence you need with our comprehensive services. From meticulous documentation to expert analysis, we ensure no stone is left unturned.
                   </p>
                 </div>
               </div>
@@ -248,7 +248,7 @@
                   <i class="fa-solid fa-binoculars icon-md"></i>
                   <h2 class="heading-3">strong investigation team</h2>
                   <p class="body-2">
-                    Meet our formidable investigation team, your trusted allies in uncovering the truth. With a blend of expertise, experience, and unwavering dedication, we tackle every case with precision and determination. Count on us to deliver results, no matter the challenge
+                    Meet our formidable investigation team, your trusted allies in uncovering the truth. With a blend of expertise, experience, and unwavering dedication.
                   </p>
                 </div>
               </div>
@@ -583,18 +583,17 @@
             </div>
 
 
-           <!--  <div class="d-flex flex-column justify-content-start gap-8" data-aos="fade-up" data-aos-delay="150">
+             <div class="d-flex flex-column justify-content-start gap-8" data-aos="fade-up" data-aos-delay="150">
               <div class="d-flex align-items-center gap-8">
                 <div class="icon d-flex justify-content-center align-items-center">
-                  <i class="fa-solid fa-phone icon-md"></i>
+                  <i class="fa-solid fa-envelope icon-md"></i>
                 </div>
                 <div class="d-flex flex-column justify-content-center align-self-center h-100">
-                  <h3 class="heading-3 m-0 p-0">call us !</h3>
-                  <p class="body-2">+123 456 789</p>
+                  <h3 class="heading-3 m-0 p-0">Email Us:</h3>
+                  <p class="body-2">mail@visntel.com</p>
                 </div>
               </div>
-            </div> -->
-
+            </div> 
 
 
             <!-- <div class="d-flex flex-column justify-content-start gap-8" data-aos="fade-up" data-aos-delay="200">
@@ -666,10 +665,10 @@
       <div class="row justify-content-center align-items-center g-4 py-2">
         <div class="col-lg-6 col-12">
           <div class="d-flex gap-3">
-            <i class="fa-brands fa-facebook icon-sm"></i>
-            <i class="fa-brands fa-instagram icon-sm"></i>
-            <i class="fa-brands fa-twitter icon-sm"></i>
-            <i class="fa-brands fa-linkedin icon-sm"></i>
+           <a href="https://facebook.com/visntel" target="_blank"> <i class="fa-brands fa-facebook icon-sm"></i></a>
+            <a href="https://instagram.com/thevisntel" target="_blank"> <i class="fa-brands fa-instagram icon-sm"></i></a>
+            <a href="https://x.com/visntel" target="_blank"> <i class="fa-brands fa-twitter icon-sm"></i></a>
+            <a href="https://linkedin.com/company/visntel" target="_blank"> <i class="fa-brands fa-linkedin icon-sm"></i></a>
           </div>
         </div>
         <div class="col-lg-6 col-12">
