--- a/services.html
+++ b/services.html
@@ -96,10 +96,7 @@
                 <div class="container pt-lg-4 pt-2 pb-lg-4 pb-2">
                     <div class="d-flex flex-column justify-content-center align-items-center text-center">
                         <h1 class="heading-1">our services</h1>
-                        <p class="body-1 col-lg-9 col-12">Our seasoned team of experts at Visntel specializes in
-                            unravelling
-                            mysteries, conducting thorough background checks, and uncovering the truth with utmost
-                            confidentiality.
+                        <p class="body-1 col-lg-9 col-12">Our seasoned team of experts at Visntel specializes in unravelling mysteries, conducting thorough background checks, and uncovering the truth with utmost confidentiality.
                         </p>
                     </div>
                 </div>
@@ -109,79 +106,55 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 col-12" data-aos="fade-right" data-aos-delay="200">
                     <div class="d-flex flex-column gap-16 padding-16 py-4 bg-box">
-                        <i class="fa-solid fa-magnifying-glass icon-lg"></i>
-                        <h2 class="heading-2">surveillance services</h2>
+                        <i class="fa-solid fa-building icon-lg"></i>
+                        <h2 class="heading-2">Corporate Espionage</h2>
                         <p class="body-2">
-                            redefines the art of sleuthing with unparalleled professionalism and precision. Our seasoned
-                            team of
-                            experts at Visntel specializes in unravelling mysteries, conducting thorough background
-                            checks, and
-                            uncovering the truth with utmost confidentiality.
+                            Outsmarting your rivals is our game. Let us handle your competitor espionage with finesse and discretion, ensuring you stay ahead and stealthy in the competitive arena.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12" data-aos="fade-down" data-aos-delay="150">
                     <div class="d-flex flex-column gap-16 padding-16 py-4 bg-box">
                         <i class="fa-solid fa-user-shield icon-lg"></i>
-                        <h2 class="heading-2">personal protection</h2>
+                        <h2 class="heading-2">Private Investigation</h2>
                         <p class="body-2">
-                            redefines the art of sleuthing with unparalleled professionalism and precision. Our seasoned
-                            team of
-                            experts at Visntel specializes in unravelling mysteries, conducting thorough background
-                            checks, and
-                            uncovering the truth with utmost confidentiality.
+                           This includes tasks like surveillance, finding missing persons, investigating infidelity, and gathering evidence for legal cases. Contact us today.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12" data-aos="fade-left" data-aos-delay="200">
                     <div class="d-flex flex-column gap-16 padding-16 py-4 bg-box">
-                        <i class="fa-solid fa-binoculars icon-lg"></i>
-                        <h2 class="heading-2">infidelity investigation</h2>
+                        <i class="fa-solid fa-globe icon-lg"></i>
+                        <h2 class="heading-2">Cybersecurity Investigation</h2>
                         <p class="body-2">
-                            redefines the art of sleuthing with unparalleled professionalism and precision. Our seasoned
-                            team of
-                            experts at Visntel specializes in unravelling mysteries, conducting thorough background
-                            checks, and
-                            uncovering the truth with utmost confidentiality.
+                            Investigating cybercrimes such as hacking, identity theft, or online fraud, often involving digital forensics and tracking online activity.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12" data-aos="fade-right" data-aos-delay="250">
                     <div class="d-flex flex-column gap-16 padding-16 py-4 bg-box">
                         <i class="fa-solid fa-magnifying-glass icon-lg"></i>
-                        <h2 class="heading-2">surveillance services</h2>
+                        <h2 class="heading-2">Undercover Operations</h2>
                         <p class="body-2">
-                            redefines the art of sleuthing with unparalleled professionalism and precision. Our seasoned
-                            team of
-                            experts at Visntel specializes in unravelling mysteries, conducting thorough background
-                            checks, and
-                            uncovering the truth with utmost confidentiality.
+                            Infiltrating organizations or groups to gather information or evidence, commonly used in law enforcement to tackle organized crime or terrorism.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="200">
                     <div class="d-flex flex-column gap-16 padding-16 py-4 bg-box">
-                        <i class="fa-solid fa-binoculars icon-lg"></i>
-                        <h2 class="heading-2">infidelity investigation</h2>
+                        <i class="fa-solid fa-user icon-lg"></i>
+                        <h2 class="heading-2">Background Checks</h2>
                         <p class="body-2">
-                            redefines the art of sleuthing with unparalleled professionalism and precision. Our seasoned
-                            team of
-                            experts at Visntel specializes in unravelling mysteries, conducting thorough background
-                            checks, and
-                            uncovering the truth with utmost confidentiality.
+                            Verifying the identity, credentials, or history of individuals, often used in employment screening, due diligence for business transactions, or personal matters. 
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12" data-aos="fade-left" data-aos-delay="250">
                     <div class="d-flex flex-column gap-16 padding-16 py-4 bg-box">
-                        <i class="fa-solid fa-user-shield icon-lg"></i>
-                        <h2 class="heading-2">personal protection</h2>
+                        <i class="fa-solid fa-binoculars icon-lg"></i>
+                        <h2 class="heading-2">Cold Case Investigation</h2>
                         <p class="body-2">
-                            redefines the art of sleuthing with unparalleled professionalism and precision. Our seasoned
-                            team of
-                            experts at Visntel specializes in unravelling mysteries, conducting thorough background
-                            checks, and
-                            uncovering the truth with utmost confidentiality.
+                          Reopening and re-examining unsolved cases, using modern forensic techniques or new leads to try to solve long-standing mysteries. Contact us today.
                         </p>
                     </div>
                 </div>
