--- a/index.html
+++ b/index.html
@@ -146,32 +146,33 @@
           conducting thorough background checks, and uncovering the truth with utmost confidentiality.</p>
       </div>
       <div class="row g-4">
-        <div class="col-lg-4 col-md-6 col-12" data-aos="fade-right" data-aos-delay="200">
-          <div class="d-flex flex-column gap-16 padding-16 py-4 bg-box">
-            <i class="fa-solid fa-magnifying-glass icon-lg"></i>
-            <h2 class="heading-2">surveillance services</h2>
-            <p class="body-2">
-              From discreet physical surveillance to digital monitoring, we tailor solutions to your needs. Our team ensures confidentiality and delivers detailed reports. Contact us today.
-            </p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="150">
-          <div class="d-flex flex-column gap-16 padding-16 py-4 bg-box">
-            <i class="fa-solid fa-user-shield icon-lg"></i>
-            <h2 class="heading-2">personal protection</h2>
-            <p class="body-2">
-              Our trained professionals provide discreet and reliable protection tailored to your needs. Whether for individuals, families, or events, we prioritize your safety and well-being.
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12" data-aos="fade-left" data-aos-delay="200">
-          <div class="d-flex flex-column gap-16 padding-16 py-4 bg-box">
-            <i class="fa-solid fa-binoculars icon-lg"></i>
-            <h2 class="heading-2">infidelity investigation</h2>
-            <p class="body-2">
-              Uncover the truth with our infidelity investigation services. Our professional team specializes in gathering evidence to provide clarity in delicate situations.
-            </p>
-          </div>
-        </div>
+       <div class="col-lg-4 col-md-6 col-12" data-aos="fade-right" data-aos-delay="200">
+                    <div class="d-flex flex-column gap-16 padding-16 py-4 bg-box">
+                        <i class="fa-solid fa-building icon-lg"></i>
+                        <h2 class="heading-2">Corporate Espionage</h2>
+                        <p class="body-2">
+                            Outsmarting your rivals is our game. Let us handle your competitor espionage with finesse and discretion, ensuring you stay ahead and stealthy in the competitive arena.
+                        </p>
+                    </div>
+                </div>
+        <div class="col-lg-4 col-md-6 col-12" data-aos="fade-down" data-aos-delay="150">
+                    <div class="d-flex flex-column gap-16 padding-16 py-4 bg-box">
+                        <i class="fa-solid fa-user-shield icon-lg"></i>
+                        <h2 class="heading-2">Private Investigation</h2>
+                        <p class="body-2">
+                           This includes tasks like surveillance, finding missing persons, investigating infidelity, and gathering evidence for legal cases. Contact us today.
+                        </p>
+                    </div>
+                </div>
+     <div class="col-lg-4 col-md-6 col-12" data-aos="fade-left" data-aos-delay="200">
+                    <div class="d-flex flex-column gap-16 padding-16 py-4 bg-box">
+                        <i class="fa-solid fa-globe icon-lg"></i>
+                        <h2 class="heading-2">Cybersecurity Investigation</h2>
+                        <p class="body-2">
+                            Investigating cybercrimes such as hacking, identity theft, or online fraud, often involving digital forensics and tracking online activity.
+                        </p>
+                    </div>
+                </div>
       </div>
     </div>
   </section>
